fea-rs/test-data/parse-tests/bad/include_missing_file.fea
languagesystem DFLT dflt;

feature hilo {
    pos a b 69;
} hilo;

include(i_am_quite_unlikely_to_exist.fea);

feature tata {
    pos a b 0;
} tata;
